tests/e2e/mutation_command_dot.story
a = {1: "bar"}
b = a a.values
